--- a/contato.html
+++ b/contato.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/contato.css">
+    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/styles.css">
+   
     <title>Ford Enter</title>
 </head>
 
 <body>
 
     <header>
-        <img src="/img/logo-ford-256.png" alt="Logo Ford">
+        <img src="img/logo-ford-256.png" alt="Logo Ford">
         <nav>
             <ul>
                 <li><a href="/home.html">Home</a></li>
@@ -25,7 +26,7 @@
 
     <main class="contatoPagina">
         <div class="contato-imagem">
-            <img src="/img/xls 2.2 diesel.jpg" alt="Veiculo Contato">
+            <img src="img/xls 2.2 diesel.jpg" alt="Veiculo Contato">
         </div>
         <section class="formularioContainer">
             <form class="formulario">
@@ -41,7 +42,7 @@
                 </div>
                 <div class="inputGrupo">
                     <select>
-                        <option value="" disabled selected hidden>Tipo de Contato</option>
+                        <option value="" disabled selected hidden>Feedback</option>
                         <option value="elogio">Elogio</option>
                         <option value="reclamacao">Reclamação</option>
                         <option value="solicitacao">Solicitação</option>
@@ -60,9 +61,9 @@
     <footer>
         <div class="redesSociais">
             <p>Redes Sociais</p>
-            <a href="https://facebook.com/fordbrasil"><img src="/img/facebook-50.png" alt="Facebook"></a>
-            <a href="https://instagram.com/fordbrasil"><img src="/img/instagram-logo-50.png" alt="Instagram"></a>
-            <a href="https://youtube.com/fordbrasil"><img src="/img/youtube-squared-50.png" alt="Youtube"></a>
+            <a href="https://facebook.com/fordbrasil"><img src="img/facebook-50.png" alt="Facebook"></a>
+            <a href="https://instagram.com/fordbrasil"><img src="img/instagram-logo-50.png" alt="Instagram"></a>
+            <a href="https://youtube.com/fordbrasil"><img src="img/youtube-squared-50.png" alt="Youtube"></a>
         </div>
         <div class="copyright">
             <p>&copy; 2025 Ford Motor Company todos os direitos reservados</p>
